--- a/Algorithms/Algorithms.csproj
+++ b/Algorithms/Algorithms.csproj
@@ -128,6 +128,7 @@
   <ItemGroup>
     <Compile Include="src\algs\InsertionSort.cs" />
     <Compile Include="src\algs\SelectionSort.cs" />
+    <Compile Include="src\graphics\Graph.cs" />
     <Compile Include="src\graphics\Table.cs" />
     <Compile Include="src\graphics\Visualization.cs" />
     <Compile Include="src\Main.cs" />
