--- a/Algorithms/Algorithms.csproj
+++ b/Algorithms/Algorithms.csproj
@@ -129,7 +129,11 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\algs\BoubleSort.cs" />
+    <Compile Include="src\algs\CountingSort.cs" />
+    <Compile Include="src\algs\HeapSort.cs" />
     <Compile Include="src\algs\InsertionSort.cs" />
+    <Compile Include="src\algs\QuickSort.cs" />
     <Compile Include="src\algs\SelectionSort.cs" />
     <Compile Include="src\graphics\Button.cs" />
     <Compile Include="src\graphics\Graph.cs" />
