--- a/Algorithms/Algorithms.csproj
+++ b/Algorithms/Algorithms.csproj
@@ -133,6 +133,7 @@
     <Compile Include="src\algs\CountingSort.cs" />
     <Compile Include="src\algs\HeapSort.cs" />
     <Compile Include="src\algs\InsertionSort.cs" />
+    <Compile Include="src\algs\MergeSort.cs" />
     <Compile Include="src\algs\QuickSort.cs" />
     <Compile Include="src\algs\SelectionSort.cs" />
     <Compile Include="src\graphics\Button.cs" />
